experimental/parser/testdata/parser/package/eof_after_kw.proto.stderr.txt
error: unexpected end-of-file after `package` declaration
  --> testdata/parser/package/eof_after_kw.proto:17:8
   | 
17 | package
   |        ^ expected `;`

encountered 1 error
